--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "https-proxy-agent": "^7.0.6",
     "json-bigint": "^1.0.0",
     "legend.js": "^11.9.98",
+    "node-fetch": "^2.6.7",
     "os": "^0.1.2",
     "set-cookie-parser": "^2.7.1",
     "socks-proxy-agent": "^8.0.5",
