--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "3.0.0",
   "dependencies": {
     "crypto": "^1.0.1",
     "discord.js": "^14.21.0",
@@ -11,6 +12,7 @@
     "os": "^0.1.2",
     "set-cookie-parser": "^2.7.1",
     "socks-proxy-agent": "^8.0.5",
-    "tough-cookie": "^5.1.2"
+    "tough-cookie": "^5.1.2",
+    "ws": "^8.18.3"
   }
 }
