--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "crypto": "^1.0.1",
     "discord.js": "^14.21.0",
     "fetch-cookie": "2.1.0",
+    "form-data": "^4.0.4",
     "fs": "^0.0.1-security",
     "https-proxy-agent": "^7.0.6",
     "json-bigint": "^1.0.0",
     "legend.js": "^11.9.98",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^2.7.0",
     "os": "^0.1.2",
     "set-cookie-parser": "^2.7.1",
     "socks-proxy-agent": "^8.0.5",
