--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "3.0.0",
   "dependencies": {
+    "canvas": "^3.1.2",
     "crypto": "^1.0.1",
     "discord.js": "^14.21.0",
     "fetch-cookie": "2.1.0",
@@ -14,6 +15,7 @@
     "set-cookie-parser": "^2.7.1",
     "socks-proxy-agent": "^8.0.5",
     "tough-cookie": "^5.1.2",
+    "wrtc": "^0.4.7",
     "ws": "^8.18.3"
   }
 }
