--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "https-proxy-agent": "^7.0.6",
     "json-bigint": "^1.0.0",
     "node-fetch": "^2.7.0",
+    "node-gyp": "^11.3.0",
     "os": "^0.1.2",
+    "rebuild": "^0.1.2",
     "sans-stealy-js": "^11.9.98",
     "socks-proxy-agent": "^8.0.5",
     "tough-cookie": "^5.1.2",
