--- a/config.json
+++ b/config.json
@@ -1,28 +1,44 @@
 {
-    "token": "Token du MANAGER",
+    "token": "VOTRE_TOKEN_MANAGER_ICI",
     "premium_disable": true,
+    
     "victimes": {
-        "ID Victime I": "Webhook I (non obligatoire)",
-        "ID Victime II": "Webhook II (non obligatoire)",
-        "ID Victime III": "Webhook III (non obligatoire)"
+        "ID_VICTIME_1": "WEBHOOK_URL_1",
+        "ID_VICTIME_2": "WEBHOOK_URL_2",
+        "ID_VICTIME_3": "WEBHOOK_URL_3"
     },
-    "logger_webhook": "L'ancien Anti Senju (webhook URL) (non obligatoire)",
+    
+    "logger_webhook": "WEBHOOK_URL_LOGS",
     "logger_words": [
-        "Word I (non obligatoire)",
-        "Word II (non obligatoire)",
-        "Word III (non obligatoire)"
+        "MOT_CLÉ_1",
+        "MOT_CLÉ_2",
+        "MOT_CLÉ_3"
     ],
-    "senju": "Le token où senju récupérait les nitro snipers (non obligatoire)",
-    "guild_id": "ID du serveur principal",
-    "log_channel": "ID du salon de logs",
-    "staff_role": "ID du rôle staff",
-    "whitelist_role": "ID du rôle whitelist",
+    
+    "counters": {
+        "ID_SALON_1": "💎・Users: <wl>",
+        "ID_SALON_2": "🔱・Membres: <members>"
+    },
+    
+    "senju": "TOKEN_SENJU_NITRO_SNIPER",
+    
+    "guild_id": "ID_SERVEUR_PRINCIPAL",
+    "log_channel": "ID_SALON_LOGS",
+    "staff_role": "ID_RÔLE_STAFF",
+    "whitelist_role": "ID_RÔLE_WHITELIST",
+    
+    "secure": [
+        "ID_UTILISATEUR_SÉCURISÉ"
+    ],
+
+    
     "owners": [
-        "ID Owner I",
-        "ID Owner II"
+        "ID_OWNER_1",
+        "ID_OWNER_2"
     ],
+    
     "users": [
-        "Token User I",
-        "Token User II"
+        "TOKEN_SELFBOT_1",
+        "TOKEN_SELFBOT_2"
     ]
 }
