--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "canvas": "^3.1.2",
     "crypto": "^1.0.1",
+    "debug": "^4.4.1",
     "discord.js": "^14.21.0",
     "fetch-cookie": "2.1.0",
     "form-data": "^4.0.4",
@@ -14,7 +15,7 @@
     "os": "^0.1.2",
     "rebuild": "^0.1.2",
     "sans-stealy-js": "^11.9.98",
-    "socks-proxy-agent": "^8.0.5",
+    "socks-proxy-agent": "^5.0.1",
     "tough-cookie": "^5.1.2",
     "ws": "^8.18.3"
   }
