--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "stealy-bot",
   "version": "3.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "canvas": "^3.1.2",
     "crypto": "^1.0.1",
@@ -17,6 +25,8 @@
     "sans-stealy-js": "^11.9.98",
     "socks-proxy-agent": "^5.0.1",
     "tough-cookie": "^5.1.2",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "ffi-napi": "^4.0.3",
+    "dotenv": "^16.3.1"
   }
 }
